Content alignment fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,6 +20,7 @@ body {
 .content {
   display: flex;
   flex-direction: row;
+  align-items: center;
   margin: 0 2rem;
   margin-top: 3rem;
 }
